[gd_scene load_steps=10 format=3 uid="uid://dewod72veetr"]

[ext_resource type="Script" path="res://objects/enemy.gd" id="1_jfsns"]
[ext_resource type="Texture2D" uid="uid://cclqivh715mk3" path="res://sprites/super/Super Antic.png" id="2_tj2fl"]
[ext_resource type="Texture2D" uid="uid://cqx600kf5om0n" path="res://sprites/super/Super Attack.png" id="3_yy1yp"]
[ext_resource type="Texture2D" uid="uid://bs8hcrhpernxk" path="res://sprites/super/Super Hurt.png" id="4_wcxg7"]
[ext_resource type="Texture2D" uid="uid://vbfxtm351sfx" path="res://sprites/super/Super Run 1.png" id="5_mvwin"]
[ext_resource type="Texture2D" uid="uid://bbvve8wjjtssv" path="res://sprites/super/Super Run 2.png" id="6_ex5gd"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="8_g2eyp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8fl5f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tj2fl")
}, {
"duration": 1.0,
"texture": ExtResource("3_yy1yp")
}],
"loop": true,
"name": &"attack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_wcxg7")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mvwin")
}, {
"duration": 1.0,
"texture": ExtResource("6_ex5gd")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_iix87"]
radius = 0.75

[node name="enemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.591225, 0)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jfsns")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 0, 0)
billboard = 1
sprite_frames = SubResource("SpriteFrames_8fl5f")
animation = &"attack"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.778187, 0, 0, 0, 0.778187, 0, 0, 0, 0.778187, 0, -0.208219, 0)
shape = SubResource("SphereShape3D_iix87")

[node name="RayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 0.5)

[node name="MuzzleA" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.45, 0.3, 0.4)
visible = false
sprite_frames = ExtResource("8_g2eyp")
frame = 2

[node name="MuzzleB" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.45, 0.3, 0.4)
visible = false
sprite_frames = ExtResource("8_g2eyp")
frame = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = -0.5
avoidance_enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
